[package]
name = "nftfi"
crate = "nftfi"
version = "0.1.0"
edition = "2021"
exclude = ["shell.nix"]
license = "MIT"
homepage = "https://github.com/dialecticch/nftfi-rs/"
repository = "https://github.com/dialecticch/nftfi-rs/"
readme = "README.md"
description = "Client library for nftifi"

[badges]
github = { repository = "dialecticch/nftfi-rs" }

[dependencies]
async-stream = "^0.3"
chrono = {version = "^0.4", features = ["serde"]}
ethereum-types = { version = "^0.13"}
futures = {version = "^0.3"}
governor = "^0.4"
reqwest = {version = "^0.11", features = ["json", "rustls"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
serde_path_to_error = {version = "^0.1"}
thiserror = {version = "^1.0"}
tracing = "^0.1"
url = "^2.2"

[dev-dependencies]
tokio = {version = "^1.15", features = ["full"]}
